add the complete form and style of it

--- a/index.html
+++ b/index.html
@@ -2,19 +2,84 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap" />
         <link href="styles/styles.css" rel="stylesheet"/>
         <title>FCC: Survey Form</title>
     </head>
     <body>
-
-
-
-
-
-
-
-
-
-
+        <div>
+            <h1 id="title">freeCodeCamp Survey Form</h1>
+            <p id="description">Thank you for taking the time to help us improve the platform</p>
+        </div>
+        <div>
+            <form id="survey-form">
+                <p id="p-name">Name</p>
+                <input id="name" class="form-control" placeholder="Enter your name">
+                <br>
+                <p id="p-email">Email</p>
+                <input id="email" class="form-control" placeholder="Enter your Email">
+                <br>
+                <p id="p-number">Age</p>
+                <input id="number" class="form-control" type="number" name="age" min="10" max="99" placeholder="Age">
+                <br>
+                <p id="p-dropdown">Which option best describes your current role?</p>
+                <select id="dropdown" class="form-control" name="role" required="">
+                    <option disabled="disabled" selected="selected" value="">Select current role</option>
+                    <option value="student">Student</option>
+                    <option value="job">Full Time Job</option>
+                    <option value="learner">Full Time Learner</option>
+                    <option value="preferNo">Prefer not to say</option>
+                    <option value="other">Other</option>
+                </select>
+                <br>
+                <p id="p-recomend">Would you recomend freeCodeCamp to a friend?</p>
+                <input id="definitely" class="radio-style" name="recomend" type="radio" value="definitely">
+                <label for="definitely" class="radio-text">Definitely</label>
+                <br>
+                <input id="maybe" class="radio-style" name="recomend" type="radio" value="maybe">
+                <label for="maybe" class="radio-text">Maybe</label>
+                <br>
+                <input id="not-sure" class="radio-style" name="recomend" type="radio" value="not-sure">
+                <label for="not-sure" class="radio-text" >Not sure</label>
+                <br>
+                <p id="p-feature">What is your favorite feature of freeCodeCamp?</p>
+                <select id="feature" class="form-control" name="favorite-feature" required="">
+                    <option disabled="disabled" selected="selected" value="">Select an option</option>
+                    <option value="challenges">Challenges</option>
+                    <option value="projects">Projects</option>
+                    <option value="community">Community</option>
+                    <option value="open-source">Open Source</option>
+                    </select>
+                    <br>
+                <p id="p-prefer">What would you like to see improved?<span class="clue">(Check all that apply)</span></p>
+                <input class="input-checkbox" type="checkbox" value="front-end-projects" name="prefer">
+                <label for="prefer" class="checkbox-text">Front-end Projects</label><br>
+                <input class="input-checkbox" type="checkbox" value="front-end-projects" name="prefer">
+                <label for="prefer" class="checkbox-text">Front-end Projects</label><br>
+                <input class="input-checkbox" type="checkbox" value="back-end-projects" name="prefer">
+                <label for="prefer" class="checkbox-text">Back-end Projects</label><br>
+                <input class="input-checkbox" type="checkbox" value="data-visualization" name="prefer">
+                <label for="prefer" class="checkbox-text">Data Visualization</label><br>
+                <input class="input-checkbox" type="checkbox" value="challenges" name="prefer">
+                <label for="prefer" class="checkbox-text">Challenges</label><br>
+                <input class="input-checkbox" type="checkbox" value="open-source-community" name="prefer">
+                <label for="prefer" class="checkbox-text">Open Souce Community</label><br>
+                <input class="input-checkbox" type="checkbox" value="gitter-help-rooms" name="prefer">
+                <label for="prefer" class="checkbox-text">Gitter help rooms</label><br>
+                <input class="input-checkbox" type="checkbox" value="videos" name="prefer">
+                <label for="prefer" class="checkbox-text">Videos</label><br>
+                <input class="input-checkbox" type="checkbox" value="city-meetups" name="prefer">
+                <label for="prefer" class="checkbox-text">City Meetups</label><br>
+                <input class="input-checkbox" type="checkbox" value="wiki" name="prefer">
+                <label for="prefer" class="checkbox-text">Wiki</label><br>
+                <input class="input-checkbox" type="checkbox" value="forum" name="prefer">
+                <label for="prefer" class="checkbox-text">Forum</label><br>
+                <input class="input-checkbox" type="checkbox" value="additional-courses" name="prefer">
+                <label for="prefer" class="checkbox-text">Additional Courses</label><br>
+                <p>Any comments or suggestions?</p>
+                <textarea id="comments" name="comment" placeholder="Enter your comment here..."></textarea>
+                <button id="submit-button" type="button">Submit</button> 
+            </form>
+        </div>
     </body>
 </html>
